--- a/public/css/login.css
+++ b/public/css/login.css
@@ -118,3 +118,16 @@ body{
     color: red;
     font-size: 13px;
 }
+
+.toast {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f44336;
+    color: white;
+    border-radius: 5px;
+    padding: 16px;
+    z-index: 1;
+    display: none;
+}
